crates/strider-analyze/tests/snapshots/ppc64le__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x100102d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ f2", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x100102d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "25" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "32" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u64\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u64\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "48" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u64\n→ ram[sp - 160]", shape=box3d, fillcolor="#20182a"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "52" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "55" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "55" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ f1", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v58" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v58" [color="#888888", style=dashed];
  "v58" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v59" [color="#888888", style=dashed];
  "v59" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r4", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v60" [color="#888888", style=dashed];
  "v60" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v61" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v61" [color="#888888", style=dashed];
  "v61" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "62" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="φ Val", shape=house, fillcolor="#163030"];
  "12" -> "62" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v69" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v69" [color="#888888", style=dashed];
  "v69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "73" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v74" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v74" [color="#888888", style=dashed];
  "v74" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "75" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "77" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "79" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "13" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "82" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "84" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "5" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v86" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v86" -> "84" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "84" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "87" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "88" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "90" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "92" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "94" -> "93" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "93" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "94" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "92" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "96" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "97" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "98" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "100" -> "98" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "101" -> "100" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "102" -> "100" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "102" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "101" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "96" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "103" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "104" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "104" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "105" -> "104" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "106" -> "104" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "106" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "105" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "107" -> "105" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "107" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "108" -> "107" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "108" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "101" -> "107" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "103" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "109" -> "103" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "110" -> "103" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "110" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "109" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "111" -> "109" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "111" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "101" -> "111" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "112" -> "111" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "112" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
